--- a/tool/package.json
+++ b/tool/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack-dev-server --host 0.0.0.0 --port 80"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "css-loader": "^5.0.1",
-    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.11.0"
+    "webpack": "^5.11.0",
+    "webpack-dev-server": "^5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
